evaluation_results_20250804_235526/replace_mode_results/iter_1/compile_err.txt
Main.java:180: error: incompatible types: float cannot be converted to Long
    this.miamis = 12.5f;
                  ^
1 error
